--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -1,20 +1,23 @@
-# Insightron - Minimal Requirements
+# Insightron v1.0.0 - Minimal Requirements
 # Use this if the main requirements.txt fails
 # Optimized for compatibility and faster installation
 
-# Core Whisper AI (latest)
-openai-whisper
+# Core Whisper AI (latest stable)
+openai-whisper>=20231117
 
-# Essential audio processing
-librosa>=0.10.0
-soundfile>=0.12.0
+# Essential audio processing (minimal versions)
+librosa>=0.10.0,<1.0.0
+soundfile>=0.12.0,<1.0.0
 
 # Progress tracking
-tqdm>=4.60.0
+tqdm>=4.60.0,<5.0.0
 
 # Audio format support
-pydub>=0.25.0
+pydub>=0.25.0,<1.0.0
 
 # Core scientific computing (minimal versions)
-numpy>=1.21.0
-scipy>=1.7.0
+numpy>=1.21.0,<2.0.0
+scipy>=1.7.0,<2.0.0
+
+# Enhanced error handling
+colorama>=0.4.6,<1.0.0
