feat: Implement batch processing, refine transcription and text formatting, and add quick start and batch processing documentation.

--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -6,18 +6,18 @@
 openai-whisper>=20231117
 
 # Essential audio processing (minimal versions)
-librosa>=0.10.0,<1.0.0
-soundfile>=0.12.0,<1.0.0
+librosa>=0.10.0
+soundfile>=0.12.0
 
 # Progress tracking
-tqdm>=4.60.0,<5.0.0
+tqdm>=4.60.0
 
 # Audio format support
-pydub>=0.25.0,<1.0.0
+pydub>=0.25.0
 
 # Core scientific computing (minimal versions)
-numpy>=1.21.0,<2.0.0
-scipy>=1.7.0,<2.0.0
+numpy>=1.21.0
+scipy>=1.7.0
 
 # Enhanced error handling
-colorama>=0.4.6,<1.0.0
+colorama>=0.4.6
