--- a/user_settings.json
+++ b/user_settings.json
@@ -1,6 +1,6 @@
 {
     "model": "medium",
-    "language": "en - English",
+    "language": "auto",
     "formatting": "auto",
     "theme": "Dark",
     "last_folder": "C:\\Users\\mshan"
