--- a/config.yaml
+++ b/config.yaml
@@ -28,6 +28,39 @@ model:
   # cuda = force GPU usage (requires NVIDIA GPU with CUDA support)
   # Default: auto
   device: "auto"
+  
+  # ========== Quality Optimization Settings ==========
+  
+  # Quality mode: Trade-off between speed and accuracy
+  # Options: high, balanced, fast
+  # high = maximum accuracy, slower (beam_size=5, best_of=5)
+  # balanced = good accuracy and speed (beam_size=3, best_of=3)
+  # fast = speed priority, lower accuracy (beam_size=1, best_of=1)
+  # Default: high
+  quality_mode: "high"
+  
+  # Enable VAD (Voice Activity Detection): Filter out silence and noise
+  # Produces cleaner segments by removing non-speech portions
+  # Highly recommended for better quality
+  # Default: true
+  enable_vad: true
+  
+  # VAD threshold: Speech detection confidence (0.0-1.0)
+  # Lower = more sensitive (captures quieter speech)
+  # Higher = less sensitive (only clear speech)
+  # Default: 0.5
+  vad_threshold: 0.5
+  
+  # Enable retry: Retry transcription with fallback parameters on failure
+  # Increases reliability at cost of potential slower processing on errors
+  # Default: true
+  enable_retry: true
+  
+  # Max retries: Number of retry attempts with degraded quality settings
+  # 0 = no retries (fail immediately)
+  # 1-3 = recommended range
+  # Default: 2
+  max_retries: 2
 
 # ============================================================================
 # Runtime Configuration
