--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -1,10 +1,14 @@
-# Insightron v1.0.0 - Enhanced Whisper AI Transcription Project Requirements
+# Insightron v2.1.0 - Enhanced Whisper AI Transcription Project Requirements
 # Optimized for performance, reliability, and cross-platform compatibility
 
 # Core Whisper AI (faster-whisper with CTranslate2)
 # v1.2.0+ uses importlib.metadata (no pkg_resources warnings)
 # Includes batched inference for 4x faster batch processing
 faster-whisper>=1.2.0
+
+# Explicitly list tokenizers to ensure we get a compatible version
+# or trigger the Rust build requirement clearly
+tokenizers>=0.13.3
 
 # Essential audio processing (optimized versions for stability)
 librosa>=0.10.1
