feat: Release v2.2.0 with enhanced installation scripts, improved error handling, and updated dependency management for better compatibility and performance.

--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -1,18 +1,21 @@
-# Insightron v2.1.0 - Enhanced Whisper AI Transcription Project Requirements
+# Insightron v2.2.0 - Enhanced Whisper AI Transcription Project Requirements
 # Optimized for performance, reliability, and cross-platform compatibility
 
 # Core Whisper AI (faster-whisper with CTranslate2)
 # v1.2.0+ uses importlib.metadata (no pkg_resources warnings)
 # Includes batched inference for 4x faster batch processing
-faster-whisper>=1.2.0
+# Compatible with Python 3.10-3.12
+faster-whisper>=1.2.0,<2.0.0
 
 # Explicitly list tokenizers to ensure we get a compatible version
 # or trigger the Rust build requirement clearly
-tokenizers>=0.19.1
+# Note: May require Rust for building from source on some systems
+tokenizers>=0.19.1,<1.0.0
 
 # Essential audio processing (optimized versions for stability)
-librosa>=0.10.1
-soundfile>=0.12.1
+# librosa requires numpy, scipy, and soundfile
+librosa>=0.10.1,<1.0.0
+soundfile>=0.12.1,<1.0.0
 
 # Progress tracking and utilities
 tqdm>=4.66.0
@@ -21,8 +24,9 @@ tqdm>=4.66.0
 pydub>=0.25.1
 
 # Core scientific computing (Windows-compatible versions)
-numpy>=1.24.0
-scipy>=1.10.0
+# numpy 1.24+ required for Python 3.10+, but <1.27 for Python 3.12 compatibility
+numpy>=1.24.0,<1.27.0
+scipy>=1.10.0,<2.0.0
 
 # Optional: For advanced audio analysis and visualization
 matplotlib>=3.5.0
@@ -34,8 +38,9 @@ pytest>=7.0.0
 colorama>=0.4.6
 
 # Modern UI Framework
-customtkinter>=5.2.0
-packaging>=23.0
+# customtkinter requires tkinter (usually included with Python)
+customtkinter>=5.2.0,<6.0.0
+packaging>=23.0,<25.0
 
 # Realtime Audio Capture
 sounddevice>=0.4.6
